// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render a high depth differently than a depth of 3 1`] = `
<Fragment>
  <ButtonLink
    className="list-group-item depth-3"
    onClick={[Function]}
  >
    <h3
      className="list-group-item-heading"
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={false}
      />
      Foo
    </h3>
  </ButtonLink>
</Fragment>
`;

exports[`should render a closed menu block 1`] = `
<Fragment>
  <ButtonLink
    className="list-group-item"
    onClick={[Function]}
  >
    <h3
      className="list-group-item-heading"
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={false}
      />
      Foo
    </h3>
  </ButtonLink>
</Fragment>
`;

exports[`should render an opened menu block 1`] = `
<Fragment>
  <ButtonLink
    className="list-group-item"
    onClick={[Function]}
  >
    <h3
      className="list-group-item-heading"
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={true}
      />
      Foo
    </h3>
  </ButtonLink>
  <MenuItem
    depth={1}
    key="/bar/"
    node={
      Object {
        "content": "bar",
        "navTitle": undefined,
        "relativeName": "/bar/",
        "text": "bar",
        "title": "Bar",
        "url": "/bar/",
      }
    }
    splat="/foo/"
  />
  <MenuItem
    depth={1}
    key="/baz/"
    node={
      Object {
        "content": "baz",
        "navTitle": "baznav",
        "relativeName": "/baz/",
        "text": "baz",
        "title": "baz",
        "url": "/baz/",
      }
    }
    splat="/foo/"
  />
  <MenuBlock
    block={
      Object {
        "children": Array [
          "/baz/foo",
        ],
        "title": "Baz",
      }
    }
    depth={1}
    key="Baz"
    openByDefault={false}
    openChain={Array []}
    pages={
      Array [
        Object {
          "content": "bar",
          "navTitle": undefined,
          "relativeName": "/bar/",
          "text": "bar",
          "title": "Bar",
          "url": "/bar/",
        },
        Object {
          "content": "baz",
          "navTitle": "baznav",
          "relativeName": "/baz/",
          "text": "baz",
          "title": "baz",
          "url": "/baz/",
        },
      ]
    }
    splat="/foo/"
    title="Baz"
  />
</Fragment>
`;
